Update dashboard UI and styles

--- a/frontend-web/index.html
+++ b/frontend-web/index.html
@@ -1,15 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="dark">
 
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Elev8 Core Platform</title>
+    <meta name="theme-color" content="#1a2c38" />
+    <title>ELEV8 | World Class Casino</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Outfit:wght@500;700&display=swap"
         rel="stylesheet">
+    <script>
+        // Prevent flash of wrong theme
+        (function () {
+            var mode = localStorage.getItem('elev8-theme-mode');
+            if (mode === 'light') {
+                document.documentElement.classList.remove('dark');
+            }
+        })();
+    </script>
 </head>
 
-<body class="bg-bg-primary text-gray-200 antialiased">
+<body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
 </body>
